@@ -1,6 +1,11 @@
 2016-01-15  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
+	  Implement decoding Fujitsu Verify Control Page.
+
+2016-01-15  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
 	* SCSI/Types.cs:
 	  Added all known vendor density and medium type codes.
 
